[package]
name = "system_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
sdl2 = "*"
imgui = "*"
imgui-sdl2 = "0.15.3"
imgui-opengl-renderer = "0.12.1"
gl = "0.14.0"
sysinfo = "0.30.13"
# hostname = "0.4.0"
users = "0.11.0"
# num_cpus = "1.16.0"
# tokio = "1.39.2"
regex = "1.10.5"
pnet = "0.35.0"
